--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=T-aDk3oAAAAJ&hl=en"
-  email            : "nanduni.nimalsiri@anu.edu.au", "nandunibw@gmail.com"
+  email            : "nanduni.nimalsiri@anu.edu.au"
   researchgate     : "https://www.researchgate.net/profile/Nanduni-Nimalsiri"
   uri              :
   bitbucket        :
