--- a/_config.yml
+++ b/_config.yml
@@ -89,22 +89,22 @@ author:
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=T-aDk3oAAAAJ&hl=en"
   email            : "nanduni.nimalsiri@anu.edu.au"
+  linkedin         : "nanduni"
+  github           : "nanduni-nin"
   researchgate     : "https://www.researchgate.net/profile/Nanduni-Nimalsiri"
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/nanduni.nin/"
+  facebook         : "nanduni.nin"
   foursquare       :
-  github           : "https://github.com/nanduni-nin"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/nanduni/"
-  orcid            : "https://orcid.org/0000-0002-9338-0596"
+  orcid            : #"https://orcid.org/0000-0002-9338-0596"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
