--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,11 @@
 # main links links
 main:
+
+  - title: "Education"
+    url: /education/   
+    
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
