--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@ main:
   - title: "Research"
     url: /research/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Professional Experience"
+    url: /professional_experience/
     
   - title: "CV"
     url: /cv/
