--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /teaching/ 
     
  - title: "Awards & Scholarships"
-    url: /awards_scholarships/ 
+    url: /awards-scholarships/ 
        
     
 
