--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Teaching"
-    url: /teaching/ 
+ # - title: "Teaching"
+  #  url: /teaching/ 
     
  - title: "Awards Scholarships"
     url: /awards_scholarships/ 
