--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@ main:
  # - title: "Teaching"
   #  url: /teaching/ 
     
- - title: "Awards Scholarships"
-    url: /awards_scholarships/ 
+ # - title: "Awards Scholarships"
+ #   url: /awards_scholarships/ 
        
     
 
