--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,11 +13,11 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Teachings"
+  - title: "Teaching"
     url: /teachings/ 
     
- # - title: "Awards Scholarships"
- #   url: /awards_scholarships/ 
+ - title: "Awards Scholarships"
+   url: /awards_scholarships/ 
        
     
 
