--- a/_config.yml
+++ b/_config.yml
@@ -85,14 +85,14 @@ author:
   avatar           : "profile.png"
   bio              : "Postdoctoral Research Fellow"
   location         : "Sydney, Australia"
-  employer         :
+  employer         : "https://cecc.anu.edu.au/people/nanduni-nimalsiri"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=T-aDk3oAAAAJ&hl=en"
   email            : "nanduni.nimalsiri@anu.edu.au"
   linkedin         : "nanduni"
   github           : "nanduni-nin"
   researchgate     : "https://www.researchgate.net/profile/Nanduni-Nimalsiri"
-  uri              :
+  uri              : "https://medium.com/@nanduni"
   bitbucket        :
   codepen          :
   dribbble         :
